[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategicc"
version = "2.4"
description = "State and Transition Integrated Economic-Environmental Accounting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shlhnj" }]
keywords = [
    "STSM", "land cover", "ecosystem accounting",
    "SEEA-EA", "landscape ecology", "Monte Carlo",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=10.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev         = ["pytest>=7.0", "pytest-cov"]
calibration = ["rasterio>=1.3"]

[project.urls]
Homepage   = "https://github.com/Shlhnj/strategicc"
Repository = "https://github.com/Shlhnj/strategicc"
Issues     = "https://github.com/Shlhnj/strategicc/issues"

[project.scripts]
strategicc = "strategicc.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["strategicc*"]
